Integrate mail service with dev and prod SMTP server
