# packages/backend/tsoa/routes.ts
@@ -30,28 +30,29 @@ const models: TsoaRoute.Models = {
             "password": {"dataType":"string","required":true},
             "name": {"dataType":"string","required":true},
             "role": {"ref":"UserRole","required":true},
+            "verified": {"dataType":"boolean","required":true},
         },
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "Pick_User.Exclude_keyofUser.id-or-role__": {
+    "Pick_User.Exclude_keyofUser.id-or-role-or-verified__": {
         "dataType": "refAlias",
         "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"email":{"dataType":"string","required":true},"password":{"dataType":"string","required":true},"name":{"dataType":"string","required":true}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "Omit_User.id-or-role_": {
+    "Omit_User.id-or-role-or-verified_": {
         "dataType": "refAlias",
-        "type": {"ref":"Pick_User.Exclude_keyofUser.id-or-role__","validators":{}},
+        "type": {"ref":"Pick_User.Exclude_keyofUser.id-or-role-or-verified__","validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "UserCreationRequest": {
         "dataType": "refAlias",
-        "type": {"ref":"Omit_User.id-or-role_","validators":{}},
+        "type": {"ref":"Omit_User.id-or-role-or-verified_","validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "APIErrorCode": {
         "dataType": "refAlias",
-        "type": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["ERR_UNKNOWN"]},{"dataType":"enum","enums":["ERR_TOKEN_MISSING_IN_HEADER"]},{"dataType":"enum","enums":["ERR_TOKEN_INVALID"]},{"dataType":"enum","enums":["ERR_TOKEN_SUBJECT_INVALID"]},{"dataType":"enum","enums":["ERR_PERMISSION_DENIED"]},{"dataType":"enum","enums":["ERR_VALIDATION"]},{"dataType":"enum","enums":["ERR_USER_ALREADY_EXISTS"]},{"dataType":"enum","enums":["ERR_USERNAME_PASSWORD_INVALID"]}],"validators":{}},
+        "type": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["ERR_UNKNOWN"]},{"dataType":"enum","enums":["ERR_TOKEN_MISSING_IN_HEADER"]},{"dataType":"enum","enums":["ERR_TOKEN_INVALID"]},{"dataType":"enum","enums":["ERR_TOKEN_SUBJECT_INVALID"]},{"dataType":"enum","enums":["ERR_PERMISSION_DENIED"]},{"dataType":"enum","enums":["ERR_VALIDATION"]},{"dataType":"enum","enums":["ERR_USER_ALREADY_EXISTS"]},{"dataType":"enum","enums":["ERR_USER_NOT_VERIFIED"]},{"dataType":"enum","enums":["ERR_USERNAME_PASSWORD_INVALID"]},{"dataType":"enum","enums":["ERR_SECURITY_CONTEXT_NOT_SET"]}],"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "APIErrorType": {
@@ -179,9 +180,42 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsAuthController_verifyAccount: Record<string, TsoaRoute.ParameterSchema> = {
+                token: {"in":"path","name":"token","required":true,"dataType":"string"},
+                req: {"in":"request","name":"req","required":true,"dataType":"object"},
+                errTokenInvalid: {"in":"res","name":"401","required":true,"ref":"APIErrorType"},
+        };
+        app.get('/api/auth/verify/:token',
+            ...(fetchMiddlewares<RequestHandler>(AuthController)),
+            ...(fetchMiddlewares<RequestHandler>(AuthController.prototype.verifyAccount)),
+
+            async function AuthController_verifyAccount(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsAuthController_verifyAccount, request, response });
+
+                const controller = new AuthController();
+
+              await templateService.apiHandler({
+                methodName: 'verifyAccount',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         const argsAuthController_signin: Record<string, TsoaRoute.ParameterSchema> = {
                 requestBody: {"in":"body","name":"requestBody","required":true,"ref":"LoginRequest"},
                 errUserAlreadyExisted: {"in":"res","name":"401","required":true,"ref":"APIErrorType"},
+                errUserNotVerified: {"in":"res","name":"401","required":true,"ref":"APIErrorType"},
         };
         app.post('/api/auth/signin',
             ...(fetchMiddlewares<RequestHandler>(AuthController)),
