# packages/shared-models/src/api.type.ts
@@ -1,4 +1,4 @@
 import {User} from "./user.model";
 
-export type UserCreationRequest = Omit<User, 'id' | 'role'>;
+export type UserCreationRequest = Omit<User, 'id' | 'role' | 'verified'>;
 export type LoginRequest = Pick<User, 'email' | 'password'>;
