# packages/shared-models/src/user.model.ts
@@ -4,6 +4,7 @@ export interface User {
     password: string;
     name: string;
     role: UserRole;
+    verified: boolean;
 }
 
 export type UserRole = 'user' | 'admin';
